rows and columns

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
         "noImplicitAny": true,
         "sourceMap": true
     },
-    "files": [
-        "typings/tsd.d.ts",
-        "index.ts"
+    "exclude": [
+        "node_modules"
     ]
 }
