--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "panels",
-  "version": "0.0.0",
+  "name": "metaclicker",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1"
   },
   "devDependencies": {
-    "ts-loader": "^0.7.2",
-    "typescript": "~1.7.5",
-    "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.10.1"
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "react-hot-loader": "^3.0.0-beta.0",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --progress --colors --config webpack.dev.config.js --port 8080"
+    "postinstall": "typings install",
+    "start": "webpack-dev-server --hot --progress --colors --config webpack.dev.js --content-base ./dist --port 8080"
   }
 }
