--- a/package.json
+++ b/package.json
@@ -7,14 +7,7 @@
     "react-dom": "^15.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "react-hot-loader": "^3.0.0-beta.0",
-    "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
@@ -24,6 +17,6 @@
   },
   "scripts": {
     "postinstall": "typings install",
-    "start": "webpack-dev-server --hot --progress --colors --config webpack.dev.js --content-base ./dist --port 8080"
+    "start": "webpack-dev-server --hot --inline --progress --colors --port 8080"
   }
 }
